"ChangeLog"

2005-12-09	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-71:
	  DevelopmentPlan.dot: added graph of plan for graduation, 
		which looks rather daunting.  
	  configure.ac: added bunch of new standard library function checks
		and GNU readline warning.  


2005-12-07	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-70:
	  Makefile for-loop sh scripts:, using list=$(SUBDIRS); ...
		for compatibility with bash, which doesn't like empty
		macro variable expansions in for-syntax.  
	  configure.ac: checking for [u]int64_t types in <inttypes.h>.
	  Various other minor configuration tweaks.  
	  Updated DevelopmentPlan.dot.  
	  Gone through all shell scripts and fixed use of test [.
		Correct use of negation is "test ! ...", not "! test ..."
		Never use [, less compatible.
	  awk scripts: replaced "delete <array>" for for-loop delete
		for POSIXLY_CORRECT-ness.  
	  NEWS: validated on sun-sparc-solaris2.9, gcc-3.3!
		(Sun UltraSparc IIi, 440 MHz)


2005-11-12	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-69:
	  Configuration support for byacc.  Details in src/ChangeLog.  
	  Updated exhaustive check script, and verified it.  


	* ARTXX-00-01-04-main-00-68-merged-parser-04-06:
	  Merged -parser-04 branch to make import mechanism work.
		Featuring completely reentrant lexers and parsers.  
		Validated against bison-1.35 -2.0, yacc, flex-2.5.4, -2.5.31.


2005-11-10	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-67:
	  Fixed support for bison-1.35 and made bison generated parser pure.
	  configure.ac: now responsible for generating
		src/parser/hackt-parse.yy from src/parser/hackt-parse.yy.in
		at configure time.  


2005-11-09	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-66-merged-parser-03-10:
	  Merged -parser-03 branch which includes tons of configuration
		and Makefile improvements in configure.ac and Makefile.am