@@ -1,5 +1,5 @@
 # "scripts/Makefile.am"
-#	$Id: Makefile.am,v 1.3 2005/11/14 02:01:15 fang Exp $
+#	$Id: Makefile.am,v 1.3.2.1 2005/12/11 22:29:15 fang Exp $
 
 include $(top_srcdir)/Make.stddef
 
@@ -15,7 +15,8 @@ EXTRA_DIST += configure-gcc4.sh \
 	readable_gcc_errors.sed \
 	balance_indent.awk \
 	exhaust_check.sh \
-	tally_tests.awk
+	tally_tests.awk \
+	maintainerclobber
 
 
 include $(top_srcdir)/Make.global
