@@ -1,0 +1,48 @@
+#! /bin/sh
+#	$Id: maintainerclobber,v 1.1.2.1 2005/12/11 22:29:15 fang Exp $
+
+# emulates a "make maintainerclean"
+# run this script from the top_srcdir (root)
+# should run "make distclean" first
+
+if test ! -f configure.ac
+then
+	echo "You must run this script from the top source directory."
+	exit 1
+fi
+
+if test -f Makefile
+then
+	make maintainer-clean
+fi
+
+rm -f *~
+rm -f aclocal.m4
+rm -rf autom4te.cache
+rm -rf .deps
+rm -f autoscan.log
+rm -f configure.scan
+rm -f config.status
+rm -f configure
+(cd config && \
+	rm -f install-sh \
+	missing \
+	mkinstalldirs \
+	config.guess \
+	config.sub \
+	compile \
+	depcomp \
+	ltmain.sh )
+rm -f config.h.in
+rm -f stamp-h1
+rm -f libtool
+#  what if there are Makefiles we wish to keep? address later...
+rm -f `find . -name Makefile`
+rm -f `find . -name Makefile.in`
+rm -f `find . -name .cvsignore`
+
+# to see what's left:
+ls -R
+
+echo "Run \"bootstrap\" to regenerate maintainer files."
+
